--- a/locale/ja.json
+++ b/locale/ja.json
@@ -222,21 +222,21 @@
   "SETTINGS_DROP_FILES": "ファイルをここへドロップ",
   "SETTINGS_IMPORT_INFO": "settings.zip ファイルをドラッグ&ドロップして、設定をこのサイトにインポートします。",
 
-  "ABOUT_TITLE": "What is this?",
-  "ABOUT_INTRO": "This website is a crafting tool that tries to find a solution for your synthesis, using your own given crafting attributes and stats. It does this by means of a Genetic Algorithm. It makes thousands of semi-random guesses per second, and evaluates their results. The best guess is kept, and forms the base for the next round of guesses. In essence, it is using the brute force of your computer's CPU to find a better solution again and again. Sometimes it gets lucky and find an amazing, short and elegant solution in mere seconds- other times, it will do the weirdest most illogical things and can take a minute or more to solve your given synthesis. However, many improvements to this 'guessing' algorithm have been made since the original version hosted on Lokyst, and you will find that this version of the tool can come up with fairly good solutions in a greatly improved time!",
-  "ABOUT_INFORMATION": "Where did you get your information?",
-  "ABOUT_BUG": "I found a bug!",
-  "ABOUT_REPORT_ISSUES": "Please report issues ",
-  "ABOUT_REPORT_HERE": "here.",
-  "ABOUT_ORIGINAL": "Original Version",
-  "ABOUT_ORIGINAL_BLURB": "The original version of this tool was made and updated by Doxxx. It hasn't been updated since early Shadowbringers however, but it can still be found here; https://ffxiv-beta.lokyst.net/#/simulator",
+  "ABOUT_TITLE": "このツールは何ですか？",
+  "ABOUT_INTRO": "このサイトは、クラフター属性とステータスを使用して、作業の解法を見つけるためのツールです。これは遺伝的アルゴリズムによって行われます。毎秒数千回の半ランダムな推測を行い、その結果を評価します。そして、最良の推測が保持されて次の推測のベースとなります。つまり、コンピュータのCPUの力づくで、より良い解法を何度も探し出すのです。運が良ければ、わずか短秒で驚くほど簡潔で洗練された解決策を見つけることがありますが、場合によっては奇妙で不合理なことを行い、与えられた作業を解決するために1分以上かかることがあります。しかし、Lokystでホストされている元のバージョン以来、この「推測」アルゴリズムに対して多くの改善が行われており、このバージョンのツールは大幅に改善された時間で非常に良い解法を見つけることができます！",
+  "ABOUT_INFORMATION": "情報はどこから得たのですか？",
+  "ABOUT_BUG": "バグを見つけました！",
+  "ABOUT_REPORT_ISSUES": "問題を報告してください。",
+  "ABOUT_REPORT_HERE": "こちら",
+  "ABOUT_ORIGINAL": "元のバージョン",
+  "ABOUT_ORIGINAL_BLURB": "このツールの元のバージョンはDoxxxによって作成、更新されました。Shadowbringersの初期段階から更新されていませんが、こちらで見ることができます; https://ffxiv-beta.lokyst.net/#/simulator",
   "ABOUT_CONTRIBUTORS": "貢献者",
   "ABOUT_CONTRIBUTORS_BLURB": "これは、以下のすばらしい人々の貢献なくしては不可能です。",
-  "ABOUT_ANYTHING": "Anything else I should know?",
-  "ABOUT_RESEMBLANCE": "Any resemblance to ",
-  "ABOUT_COINCIDENCE": " is purely co-incidental. It is a nifty site though, and I highly recommend checking it out.",
+  "ABOUT_ANYTHING": "他に何か知っておくべきことはありますか？",
+  "ABOUT_RESEMBLANCE": "次のサイトと類似しています。",
+  "ABOUT_COINCIDENCE": " これは純粋な偶然です。このサイトは便利なサイトですので、ぜひ見てみてください。",
 
-  "INSTRUCTIONS_TITLE": "Using the Simulator",
+  "INSTRUCTIONS_TITLE": "シミュレーターの使用方法",
   "INSTRUCTIONS_STEP_1": "Go to the ",
   "SECTION": " section. ",
   "INSTRUCTIONS_STEP_2": "Select a class whose details you want to update.",
